--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,8 @@ on:
     # Sequence of patterns matched against refs/heads
     branches:    
       - main
-  steps:
-    - uses: actions/checkout@v3
+  jobs:
+    - uses: actions/checkout@v2
     - uses: subosito/flutter-action@v2
       with:
         channel: 'stable'
