--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -22,7 +22,9 @@ jobs:
       # Install dependencies
       - name: Get dependencies
         run: flutter pub get
+        working-directory: cz_app
 
       # Run tests
       - name: Run tests
         run: flutter test test/web_test.dart
+        working-directory: cz_app
