--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   apigateway:
     build: ./apigateway
-    command: ./node_modules/.bin/nodemon ./apigateway/src/apigateway.js
+    command: ./node_modules/.bin/nodemon ./src/apigateway.js
     env_file:
       - ./apigateway/.env
     volumes:
@@ -12,7 +12,31 @@ services:
     ports:
       - 3000:3000
     networks:
-      - mainnet
+      - servicebus
+    depends_on:
+      - rabbitmq
+    
+  applicant-forms-service:
+    build: ./applicant-forms
+    command: ./node_modules/.bin/nodemon ./src/applicantforms.js
+    env_file:
+      - ./applicant-forms/.env
+    environment:
+      - WAIT_FOR_HOST=rabbitmq
+      - ON_PORT=5672
+    volumes:
+      - ./applicant-forms/src:/usr/src/app/src
+    networks:
+      - servicebus
+    depends_on:
+      - rabbitmq
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - 15672:15672
+    networks:
+      - servicebus
 
 networks:
-  mainnet:
+  servicebus:
