renamed some stuff, added RMQ reply

--- a/backend/apigateway/.env
+++ b/backend/apigateway/.env
@@ -2,3 +2,7 @@ APIGTWY_PORT=3000
 
 RABBITMQ_CONNECTION_STRING=amqp://rabbitmq
 RABBITMQ_RPC_QUEUE_NAME=rpc_queue
+
+# Env vars for wait-for-it script
+WAIT_FOR_HOST=rabbitmq
+ON_PORT=5672
