--- a/backend/applicant-forms/.env
+++ b/backend/applicant-forms/.env
@@ -1,2 +1,6 @@
 RABBITMQ_CONNECTION_STRING=amqp://rabbitmq
 RABBITMQ_RPC_QUEUE_NAME=rpc_queue
+
+# Env vars for wait-for-it script
+WAIT_FOR_HOST=rabbitmq
+ON_PORT=5672
