changes to actions

--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -63,6 +63,7 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
           file: cz_app/Dockerfile
+          work-directory: ./cz_app
 
   deploy:
     permissions:
