Backend returns JSON

--- a/backend/apigateway/package.json
+++ b/backend/apigateway/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/apigateway.js",
   "scripts": {
+    "start": "node src/apigateway.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
