--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,7 +12,7 @@ services:
   
   mssql-db:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    user: root 
+    # user: root 
     environment:
       - ACCEPT_EULA=Y
       - MSSQL_SA_PASSWORD=keig0edw8woordjonguh
