--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
+  dio: ^5.0.3
 
 dev_dependencies:
   flutter_test:
