--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,8 +15,7 @@ services:
     user: root
     environment:
       - ACCEPT_EULA=Y
-      # Password is sha256 of the string 'czconnect'
-      - MSSQL_SA_PASSWORD=3123db6a563c87fcf30ae8c6fa1d88a684635b268b261264de6f6c64b6845516
+      - MSSQL_SA_PASSWORD="3Q%8C7`5e_dXZ#H
     volumes:
       - mssql:/var/opt/mssql/data
     networks:
