working post to db
working posting and all around jamming

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - mssql:/var/opt/mssql/data
     networks:
       - czconnect
+    ports:
+      - 1433:1433
 
 networks:
   czconnect:
