--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   email_validator: ^2.1.17
   dio: ^5.0.3
   http_mock_adapter: ^0.4.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
