--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   dio: ^5.0.3
   http_mock_adapter: ^0.4.2
   http: ^0.13.5
+  html: ^0.15.2
+  mockito: ^5.3.2
 
 dev_dependencies:
   flutter_test:
