--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -30,12 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+    
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
+  intl: ^0.18.0
   dio: ^5.0.3
   http_mock_adapter: ^0.4.2
   http: ^0.13.5
@@ -52,6 +52,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  nock: ^1.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
