--- a/.github/workflows/main_cz-connect-backend.yml
+++ b/.github/workflows/main_cz-connect-backend.yml
@@ -13,6 +13,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: backend
+
     steps:
       - uses: actions/checkout@v2
 
