--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   html: ^0.15.2
   mockito: ^5.3.2
   nock: ^1.2.1
+  very_good_analysis: ^4.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  dart_code_metrics: ^5.7.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
