updated backend & frontend test

--- a/.gitignore
+++ b/.gitignore
@@ -479,3 +479,5 @@ $RECYCLE.BIN/
 cz_app/coverage/lcov.info
 backend/obj
 backend.tests/.idea/.idea.backend.tests.dir/.idea/discord.xml
+backend.tests/.idea/.idea.backend.tests.dir/.idea/workspace.xml
+backend.tests/.idea/.idea.backend.tests.dir/.idea/projectSettingsUpdater.xml
