--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   html: ^0.15.2
   mockito: ^5.3.2
   nock: ^1.2.1
+  go_router: ^6.5.5
   very_good_analysis: ^4.0.0+1
   google_fonts: ^4.0.3
   fl_chart: ^0.62.0
