--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^2.1.1
+  jwt_decode: ^0.3.1
+  jwt_decoder: ^2.0.1
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
   intl: ^0.18.0
