--- a/.github/workflows/dart_code_guidelines.yml
+++ b/.github/workflows/dart_code_guidelines.yml
@@ -2,9 +2,9 @@ name: Dart Code Guidelines
 
 on:
   push:
-    branches: [main]
+    branches: [main, development]
   pull_request:
-    branches: [main]
+    branches: [main, development]
 
 jobs:
   build:
