--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,23 +1,30 @@
-version: '3.9'
+version: '4'
 
-services:  
+services:
   czconnect-backend:
-    build: .
+    container_name: czconnect-backend
+    image: czfluttercontainers.azurecr.io/czconnect-backend:latest
+    build:
+      context: .
+      dockerfile: Dockerfile-backend
     env_file:
       - .env
     ports:
       - 3000:3000
     networks:
       - czconnect
-  
+
   mssql-db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    build:
+      context: .
+      dockerfile: Dockerfile-mssql
+    image: czfluttercontainers.azurecr.io/mssql-db:latest
     user: root
     ports:
       - 1433:1433
     environment:
       - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD="3Q%8C7`5e_dXZ#H
+      - MSSQL_SA_PASSWORD=3Q%8C7`5e_dXZ#H
     volumes:
       - mssql:/var/opt/mssql/data
     networks:
@@ -27,6 +34,4 @@ networks:
   czconnect:
 
 volumes:
-  mssql:
-
-  
+  mssql: {}
