--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '4'
+version: '3.7'
 
 services:
   czconnect-backend:
@@ -13,6 +13,7 @@ services:
       - 3000:3000
     networks:
       - czconnect
+  
 
   mssql-db:
     build:
@@ -29,9 +30,49 @@ services:
       - mssql:/var/opt/mssql/data
     networks:
       - czconnect
+ 
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    restart: on-failure
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus:/etc/prometheus/
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+    networks:
+      - czconnect
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    restart: on-failure
+    environment:
+      GF_SERVER_HTTP_PORT: 5000
+    ports:
+      - 5000:5000
+    volumes:
+      - grafana_data:/var/lib/grafana
+    networks:
+      - czconnect
+  
+  node-exporter:
+    image: prom/node-exporter
+    container_name: node-exporter
+    restart: on-failure
+    ports:
+      - 9100:9100
+    networks:
+      - czconnect
 
 networks:
   czconnect:
 
 volumes:
-  mssql: {}
+  mssql:
+  prometheus_data:
+  grafana_data:
