--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -23,6 +23,10 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
         working-directory: cz_app
+      # Analyse project
+      - name: Run tests
+        run: flutter analyze --pub --no-fatal-infos --no-fatal-warnings
+        working-directory: cz_app
       # Run tests
       - name: Run tests
         run: flutter test
