--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -7,6 +7,7 @@ on:
     branches: [main, development]
 
 jobs:
+  flutter_test:
   build:
     runs-on: ubuntu-latest
 
@@ -24,10 +25,82 @@ jobs:
         run: flutter pub get
         working-directory: cz_app
       # Analyse project
-      - name: Run tests
+      - name: Run analyze
         run: flutter analyze --pub --no-fatal-infos --no-fatal-warnings
         working-directory: cz_app
       # Run tests
       - name: Run tests
         run: flutter test
+        working-directory: cz_app
+
+  Build_ios:
+    name: Build flutter (IOS)
+    needs: [flutter_test]
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      # Install Flutter
+      - name: Install Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '3.7.6'  # Set the version of Flutter to install
+
+      # Install dependencies
+      - name: Get dependencies
+        run: flutter pub get
+        working-directory: cz_app
+      - name: clean flutter
+        run: flutter clean
+        working-directory: cz_app
+      - name: build flutter (IOS)
+        run: flutter build ios --no-codesign
+        working-directory: cz_app
+
+  Build_android:
+    name: Build flutter (Android)
+    needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      # Install Flutter
+      - name: Install Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '3.7.6'  # Set the version of Flutter to install
+
+      # Install dependencies
+      - name: Get dependencies
+        run: flutter pub get
+        working-directory: cz_app
+      - name: clean flutter
+        run: flutter clean
+        working-directory: cz_app
+      - name: build flutter (IOS)
+        run: flutter build appbundle --no-codesign
+        working-directory: cz_app
+
+  Build_web:
+    name: Build flutter (Android)
+    needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      # Install Flutter
+      - name: Install Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '3.7.6'  # Set the version of Flutter to install
+
+      # Install dependencies
+      - name: Get dependencies
+        run: flutter pub get
+        working-directory: cz_app
+      - name: clean flutter
+        run: flutter clean
+        working-directory: cz_app
+      - name: build flutter (IOS)
+        run: flutter build web --no-codesign
         working-directory: cz_app
