--- a/.github/workflows/development_flutter-backend.yml
+++ b/.github/workflows/development_flutter-backend.yml
@@ -4,6 +4,9 @@
 name: Build and deploy ASP app to Azure Web App - flutter-backend
 
 on:
+  pull_request:
+    branches:
+      - development
   push:
     branches:
       - development
