--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     container_name: czconnect-backend
     image: czfluttercontainers.azurecr.io/czconnect-backend:latest
     build:
-      context: .
+      context: backend
       dockerfile: Dockerfile-backend
     env_file:
-      - .env
+      - backend/.env
     ports:
       - 3000:3000
     networks:
@@ -17,7 +17,7 @@ services:
 
   mssql-db:
     build:
-      context: .
+      context: backend
       dockerfile: Dockerfile-mssql
     container_name: mssql-db
     image: czfluttercontainers.azurecr.io/mssql-db:latest
@@ -68,7 +68,14 @@ services:
       - 9100:9100
     networks:
       - czconnect
-
+  flutter-web:
+    image: czfluttercontainers.azurecr.io/czconnect-flutter-web:latest
+    build:
+      context: ./cz_app
+      target: builder
+    ports:
+      - 3011:3011
+    command: [ "flutter", "run", "-d", "web-server", "--web-port", "3011", "--web-hostname", "0.0.0.0" ]
 networks:
   czconnect:
 
