--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,10 @@ jobs:
       # Checks out the repository this file is in
       - uses: actions/checkout@v3
 
+      #check for az version
+      - name: Check Azure CLI version
+        run: az --version
+
       # Logs in with your Azure credentials
       - name: Azure login
         uses: azure/login@v1.4.6
