--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ env:
   RESOURCE_GROUP: "czapp"
   CLUSTER_NAME: "czcluster"
   DOCKER_COMPOSE_FILE_PATH: "docker-compose.yml"
+  CONTAINER_NAME-db: "mssql-db"
+  CONTAINER_NAME-gate: "czconnect-backend"
 
 jobs:
   buildImage:
@@ -29,19 +31,22 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - uses: azure/docker-login@v1
+        with:
+          login-server: czfluttercontainers.azurecr.io
+          username: ${{ secrets.DOCKERIO_USERNAME }}
+          password: ${{ secrets.DOCKERIO_PASSWORD }}
       - name: Build and push images to ACR
         run: |
-          az acr build --file backend/Dockerfile-backend --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/czconnect-backend:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.RESOURCE_GROUP }} .
-          az acr build --file backend/Dockerfile-mssql --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/mssql-db:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.RESOURCE_GROUP }} .
-          az acr build --file ./cz_app/Dockerfile --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/flutter-web:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.RESOURCE_GROUP }} .
-
+          docker-compose -f ${DOCKER_COMPOSE_FILE_PATH} build
+          docker-compose -f ${DOCKER_COMPOSE_FILE_PATH} push
   deploy:
     permissions:
       actions: read
       contents: read
       id-token: write
     runs-on: ubuntu-latest
-    needs: [buildImage]
+    needs: [ buildImage ]
     steps:
       - uses: actions/checkout@v3
       - name: Azure login
@@ -61,15 +66,19 @@ jobs:
           cluster-name: ${{ env.CLUSTER_NAME }}
           admin: 'false'
           use-kubelogin: 'true'
+      # Runs Kompose to create manifest files
       - name: Bake deployment
         uses: azure/k8s-bake@v2
         with:
           renderEngine: "kompose"
           dockerComposeFile: ${{ env.DOCKER_COMPOSE_FILE_PATH }}
-          kompose-version: "latest"
+          kompose-version: "v1.26.0"  # set this to the desired Kompose version
         id: bake
+
+      # Deploys application based on manifest files from previous step
       - name: Deploy application
         uses: Azure/k8s-deploy@v4
         with:
           action: deploy
-
+          strategy: basic
+          manifests: ${{ steps.bake.outputs.manifestsBundle }}
