--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: '3'
 
 services:
   czconnect-backend:
@@ -13,14 +13,13 @@ services:
       - 3000:3000
     networks:
       - czconnect
-  
 
   mssql-db:
+    container_name: mssql-db
+    image: czfluttercontainers.azurecr.io/mssql-db:latest
     build:
       context: backend
       dockerfile: Dockerfile-mssql
-    container_name: mssql-db
-    image: czfluttercontainers.azurecr.io/mssql-db:latest
     ports:
       - 1433:1433
     environment:
@@ -30,17 +29,56 @@ services:
       - mssql:/var/opt/mssql/data
     networks:
       - czconnect
- 
 
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus
+    restart: on-failure
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus:/etc/prometheus/
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+    networks:
+      - czconnect
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    restart: on-failure
+    environment:
+      GF_SERVER_HTTP_PORT: 5000
+    ports:
+      - 5000:5000
+    volumes:
+      - grafana_data:/var/lib/grafana
+    networks:
+      - czconnect
+
+  node-exporter:
+    container_name: node-exporter
+    image: prom/node-exporter
+    restart: on-failure
+    ports:
+      - 9100:9100
+    networks:
+      - czconnect
 
   flutter-web:
     image: czfluttercontainers.azurecr.io/czconnect-flutter-web:latest
     build:
-      context: ./cz_app
-      target: builder
+      context: cz_app
+      dockerfile: Dockerfile
+
     ports:
       - 3011:3011
-    command: [ "flutter", "run", "-d", "web-server", "--web-port", "3011", "--web-hostname", "0.0.0.0" ]
+    command: ["flutter", "run", "-d", "web-server", "--web-port", "3011", "--web-hostname", "0.0.0.0"]
+    networks:
+      - czconnect
+
 networks:
   czconnect:
 
