--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,49 +30,48 @@ services:
     networks:
       - czconnect
 
-  prometheus:
-    container_name: prometheus
-    image: prom/prometheus
-    restart: on-failure
-    ports:
-      - 9090:9090
-    volumes:
-      - ./prometheus:/etc/prometheus/
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-    networks:
-      - czconnect
-
-  grafana:
-    container_name: grafana
-    image: grafana/grafana
-    restart: on-failure
-    environment:
-      GF_SERVER_HTTP_PORT: 5000
-    ports:
-      - 5000:5000
-    volumes:
-      - grafana_data:/var/lib/grafana
-    networks:
-      - czconnect
-
-  node-exporter:
-    container_name: node-exporter
-    image: prom/node-exporter
-    restart: on-failure
-    ports:
-      - 9100:9100
-    networks:
-      - czconnect
+#  prometheus:
+#    container_name: prometheus
+#    image: prom/prometheus
+#    restart: on-failure
+#    ports:
+#      - 9090:9090
+#    volumes:
+#      - ./prometheus:/etc/prometheus/
+#      - prometheus_data:/prometheus
+#    command:
+#      - '--config.file=/etc/prometheus/prometheus.yml'
+#      - '--storage.tsdb.path=/prometheus'
+#    networks:
+#      - czconnect
+#
+#  grafana:
+#    container_name: grafana
+#    image: grafana/grafana
+#    restart: on-failure
+#    environment:
+#      GF_SERVER_HTTP_PORT: 5000
+#    ports:
+#      - 5000:5000
+#    volumes:
+#      - grafana_data:/var/lib/grafana
+#    networks:
+#      - czconnect
+#
+#  node-exporter:
+#    container_name: node-exporter
+#    image: prom/node-exporter
+#    restart: on-failure
+#    ports:
+#      - 9100:9100
+#    networks:
+#      - czconnect
 
   flutter-web:
     image: czfluttercontainers.azurecr.io/czconnect-flutter-web:latest
     build:
       context: cz_app
       dockerfile: Dockerfile
-
     ports:
       - 3011:3011
     command: ["flutter", "run", "-d", "web-server", "--web-port", "3011", "--web-hostname", "0.0.0.0"]
@@ -84,5 +83,5 @@ networks:
 
 volumes:
   mssql:
-  prometheus_data:
-  grafana_data:
+#  prometheus_data:
+#  grafana_data:
