--- a/.github/workflows/feature-deployment_flutter-frontend.yml
+++ b/.github/workflows/feature-deployment_flutter-frontend.yml
@@ -4,9 +4,14 @@
 name: Build and deploy Node.js app to Azure Web App - flutter-frontend
 
 on:
+  pull_request:
+    branches:
+      - development
+      - main
   push:
     branches:
-      - feature/deployment
+      - development
+      - main
   workflow_dispatch:
 
 jobs:
@@ -23,6 +28,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd node_flutter
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -31,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./node_flutter
 
   deploy:
     runs-on: ubuntu-latest
