--- a/.github/workflows/feature-deployment_flutter-backend.yml
+++ b/.github/workflows/feature-deployment_flutter-backend.yml
@@ -23,16 +23,17 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release ./backend
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ./publish_output ./backend
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ./publish_output
+
 
   deploy:
     runs-on: ubuntu-latest
