frontend-workflow-updated

--- a/.github/workflows/feature-deployment_flutter-frontend.yml
+++ b/.github/workflows/feature-deployment_flutter-frontend.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - flutter-frontend
 
 on:
@@ -20,6 +17,40 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      # Install Flutter
+      - name: Install Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '3.7.6'  # Set the version of Flutter to install
+
+      # Install dependencies
+      - name: Get dependencies
+        run: flutter pub get
+        working-directory: cz_app
+
+      # Analyse project
+      - name: Run analyze
+        run: flutter analyze --pub --no-fatal-infos --no-fatal-warnings
+        working-directory: cz_app
+
+      # Run tests
+      - name: Run tests
+        run: flutter test
+        working-directory: cz_app
+
+      # Clean project
+      - name: clean flutter
+        run: flutter clean
+        working-directory: cz_app
+
+      # Build Web
+      - name: build flutter (Web)
+        run: flutter build web
+        working-directory: cz_app
+
+      - name: Move build to node_flutter/public-flutter
+        run: mv cz_app/build/web/ node_flutter/public-flutter/
 
       - name: Set up Node.js version
         uses: actions/setup-node@v1
