--- a/.github/workflows/remove_artifcats.yml
+++ b/.github/workflows/remove_artifcats.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - uses: kolpav/purge-artifacts-action@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN }}
           expire-in: 0days # Setting this to 0 will delete all artifacts
