--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,4 @@ backend.tests/.idea/.idea.backend.tests.dir/.idea/workspace.xml
 backend.tests/.idea/.idea.backend.tests.dir/.idea/projectSettingsUpdater.xml
 
 node_flutter/node_modules
+cz_app/.env
