--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CZConnectDatabase": "Server=tcp:flutter-backend.database.windows.net,1433;Initial Catalog=czconnect;Persist Security Info=False;User ID=m.vandenbos5@student.avans.nl;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Authentication='Active Directory Password';",
+    "CZConnectDatabase": "Server=tcp:flutter-backend.database.windows.net,1433;Initial Catalog=czconnect;Persist Security Info=False;User ID=3b7077ed-8e7d-4063-a060-3d46ace30823;Password=n!%B!'b/p6$mrZu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Authentication='Active Directory Password';",
     "LocalCZConnectDatabase": "Server=mssql-db;Database=CzConnect;Trusted_Connection=false;User Id=sa;Password='3Q%8C7`5e_dXZ#H';Encrypt=False"
   },
   "Logging": {
