--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,4 @@ backend.tests/.idea/.idea.backend.tests.dir/.idea/projectSettingsUpdater.xml
 
 node_flutter/node_modules
 cz_app/.env
+node_flutter/.idea/discord.xml
