--- a/node_flutter/package.json
+++ b/node_flutter/package.json
@@ -3,12 +3,17 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "node app.js"
+        "start": "node app.js",
+        "test": "jest test --verbose --watchAll --no-cache  --runInBand --forceExit"
     },
     "dependencies": {
         "cookie-parser": "~1.4.4",
         "debug": "~2.6.9",
         "express": "^4.18.2",
+        "jest": "^29.5.0",
         "morgan": "~1.9.1"
+    },
+    "devDependencies": {
+        "supertest": "^6.3.3"
     }
 }
