--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   google_fonts: ^4.0.3
   fl_chart: ^0.62.0
   flutter_dotenv: ^5.1.0
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
