--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -78,7 +78,7 @@ flutter:
   assets:
     - ./assets/images/profile_placeholder.png
     - ./assets/images/logo-cz.png
-    - .env
+    - env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
