--- a/cz_app/pubspec.yaml
+++ b/cz_app/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   very_good_analysis: ^4.0.0+1
   google_fonts: ^4.0.3
   fl_chart: ^0.62.0
-  flutter_dotenv: 5.0.2
+  flutter_dotenv: ^5.1.0
   flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
